--- a/Species mapping.ipynb
+++ b/Species mapping.ipynb
@@ -44229,7 +44229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 330,
    "metadata": {
     "collapsed": false
    },
@@ -44237,16 +44237,23 @@
     {
      "data": {
       "text/plain": [
-       "'Cottus bairdii'"
+       "Index(['accessRights', 'associatedOccurrences', 'associatedReferences',\n",
+       "       'associatedSequences', 'basisOfRecord', 'bibliographicCitation',\n",
+       "       'catalogNumber', 'class', 'classKey', 'collectionCode',\n",
+       "       ...\n",
+       "       'type', 'typeStatus', 'verbatimCoordinateSystem', 'verbatimDepth',\n",
+       "       'verbatimElevation', 'verbatimEventDate', 'verbatimLocality',\n",
+       "       'vernacularName', 'waterBody', 'year'],\n",
+       "      dtype='object', length=138)"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 330,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_full['species'][0]"
+    "df_full."
    ]
   },
   {
