--- a/DemoFramework.ipynb
+++ b/DemoFramework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
        "'Etheostoma_blennioides'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -58,7 +58,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-40-883bfb38adb1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmy_species\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mID\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-4-883bfb38adb1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmy_species\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mID\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m: 'GBIFSpecies' object has no attribute 'ID'"
      ]
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -977,30 +977,6 @@
        "      <td>NaN</td>\n",
        "      <td>PRESERVED_SPECIMEN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5727</td>\n",
-       "      <td>Actinopterygii</td>\n",
-       "      <td>204</td>\n",
-       "      <td>Fish specimens</td>\n",
-       "      <td>...</td>\n",
-       "      <td>PhysicalObject</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>18/6/1935</td>\n",
-       "      <td>Big Wheeling Cr. near Elm Grove</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7201</th>\n",
-       "      <td>http://vertnet.org/resources/norms.html</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>PRESERVED_SPECIMEN</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>94435</td>\n",
        "      <td>Actinopterygii</td>\n",
        "      <td>204</td>\n",
@@ -1013,6 +989,30 @@
        "      <td>NaN</td>\n",
        "      <td>2008-09-22T14:30-2008-09-22T15:45</td>\n",
        "      <td>Catatonk Creek at Candor, downstream from brid...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7201</th>\n",
+       "      <td>http://vertnet.org/resources/norms.html</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PRESERVED_SPECIMEN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5727</td>\n",
+       "      <td>Actinopterygii</td>\n",
+       "      <td>204</td>\n",
+       "      <td>Fish specimens</td>\n",
+       "      <td>...</td>\n",
+       "      <td>PhysicalObject</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>18/6/1935</td>\n",
+       "      <td>Big Wheeling Cr. near Elm Grove</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -1824,8 +1824,8 @@
        "7197            1094  Actinopterygii       204          Fishes   ...     \n",
        "7198            1863  Actinopterygii       204          Fishes   ...     \n",
        "7199            1266  Actinopterygii       204          Fishes   ...     \n",
-       "7200            5727  Actinopterygii       204  Fish specimens   ...     \n",
-       "7201           94435  Actinopterygii       204  Fish specimens   ...     \n",
+       "7200           94435  Actinopterygii       204  Fish specimens   ...     \n",
+       "7201            5727  Actinopterygii       204  Fish specimens   ...     \n",
        "7202            5018  Actinopterygii       204             Ich   ...     \n",
        "7203             244  Actinopterygii       204             Ich   ...     \n",
        "7204           26706  Actinopterygii       204             Ich   ...     \n",
@@ -1950,8 +1950,8 @@
        "7197               NaN                                      NaN   \n",
        "7198               NaN                                      NaN   \n",
        "7199               NaN                                      NaN   \n",
-       "7200               NaN                                18/6/1935   \n",
-       "7201               NaN        2008-09-22T14:30-2008-09-22T15:45   \n",
+       "7200               NaN        2008-09-22T14:30-2008-09-22T15:45   \n",
+       "7201               NaN                                18/6/1935   \n",
        "7202               NaN                  [no verbatim date data]   \n",
        "7203               NaN                                1853-1853   \n",
        "7204               NaN                  [no verbatim date data]   \n",
@@ -2013,8 +2013,8 @@
        "7197                                                NaN   \n",
        "7198                                                NaN   \n",
        "7199                                                NaN   \n",
-       "7200                    Big Wheeling Cr. near Elm Grove   \n",
-       "7201  Catatonk Creek at Candor, downstream from brid...   \n",
+       "7200  Catatonk Creek at Candor, downstream from brid...   \n",
+       "7201                    Big Wheeling Cr. near Elm Grove   \n",
        "7202                                          Wabash R.   \n",
        "7203                Black River, below falls at Elyria.   \n",
        "7204                                        Black River   \n",
@@ -2169,7 +2169,7 @@
        "[7226 rows x 138 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2180,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -2191,7 +2191,7 @@
        "2382397"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2202,7 +2202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -2217,6 +2217,28 @@
    ],
    "source": [
     "my_species.save_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Source.GBIF: 1>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_species.source"
    ]
   },
   {
