--- a/DemoFramework.ipynb
+++ b/DemoFramework.ipynb
@@ -985,6 +985,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(119, 4)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_species.get_data().shape # there are 119 records now"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {
     "collapsed": false
