--- a/notebooks/DemoFramework.ipynb
+++ b/notebooks/DemoFramework.ipynb
@@ -1948,7 +1948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -2177,18 +2177,18 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_data.head()"
+    "csv_data.head() # let's peak into the data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -2199,7 +2199,7 @@
        "array([2382397])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2210,7 +2210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -2219,17 +2219,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Saved data: /home/daniela/git/iSDM/2382397.pkl \n"
+      "Saved data: /home/daniela/git/iSDM/notebooks/2382397.pkl \n"
      ]
     }
    ],
    "source": [
-    "my_species.save_data()"
+    "my_species.save_data() # by default this 'speciesKey' is used. Alternative name can be provided"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -2240,7 +2240,7 @@
        "42"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2251,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -2262,13 +2262,20 @@
        "138"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.columns.size"
+    "data.columns.size # data from using GBIF API directly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Which columns are in 'data', but not in 'csv_data'?"
    ]
   },
   {
@@ -2418,8 +2425,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Which columns are in 'csv_data' but not in 'data'?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -2427,231 +2441,43 @@
     {
      "data": {
       "text/plain": [
-       "['specieskey',\n",
-       " 'taxonkey',\n",
-       " 'lastinterpreted',\n",
-       " 'scientificname',\n",
-       " 'taxonrank',\n",
-       " 'elevationaccuracy',\n",
-       " 'infraspecificepithet',\n",
-       " 'gbifid',\n",
-       " 'basisofrecord',\n",
-       " 'establishmentmeans',\n",
-       " 'countrycode',\n",
-       " 'mediatype',\n",
-       " 'recordedby',\n",
-       " 'issue',\n",
-       " 'recordnumber',\n",
-       " 'occurrenceid',\n",
+       "['recordedby',\n",
        " 'decimallatitude',\n",
-       " 'identifiedby',\n",
-       " 'depthaccuracy',\n",
+       " 'decimallongitude',\n",
        " 'datasetkey',\n",
-       " 'institutioncode',\n",
-       " 'catalognumber',\n",
        " 'typestatus',\n",
        " 'collectioncode',\n",
-       " 'publishingorgkey',\n",
-       " 'eventdate',\n",
+       " 'issue',\n",
+       " 'establishmentmeans',\n",
        " 'rightsholder',\n",
-       " 'decimallongitude']"
+       " 'identifiedby',\n",
+       " 'lastinterpreted',\n",
+       " 'infraspecificepithet',\n",
+       " 'taxonrank',\n",
+       " 'occurrenceid',\n",
+       " 'publishingorgkey',\n",
+       " 'scientificname',\n",
+       " 'eventdate',\n",
+       " 'taxonkey',\n",
+       " 'elevationaccuracy',\n",
+       " 'countrycode',\n",
+       " 'depthaccuracy',\n",
+       " 'institutioncode',\n",
+       " 'mediatype',\n",
+       " 'gbifid',\n",
+       " 'catalognumber',\n",
+       " 'specieskey',\n",
+       " 'basisofrecord',\n",
+       " 'recordnumber']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "list(set(csv_data.columns.tolist()) - set(data.columns.tolist()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from geopy.geocoders import Nominatim\n",
-    "geolocator = Nominatim()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Location(Булевар Видое Смилевски Бато, Реонски Центар Аеродром, Скопје, Општина Аеродром, Град Скопје, Скопски Регион, 1000, Македонија, (41.9801537, 21.4768662, 0.0))"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "geolocator.geocode(\"Vidoe Smilevski Bato, Skopje, Macedonia\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Location(Рамстор, 10А, Булевар Видое Смилевски Бато, Реонски Центар Аеродром, Скопје, Општина Аеродром, Град Скопје, Скопски Регион, 1000, Македонија, (41.9794894, 21.4764231, 0.0))"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "geolocator.reverse(\"41.9801537, 21.4768662\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from geopy.distance import vincenty"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "skopje = (41.9794894, 21.4764231)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Location(Охрид, Општина Охрид, Југозападен Регион, Македонија, (41.1127104, 20.7993744, 0.0))"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "geolocator.geocode(\"Ohrid, Macedonia\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "ohrid = (41.1127104, 20.7993744)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "111.61807162804502"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vincenty(skopje,ohrid).kilometers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Location(Amsterdam, Centrum, Amsterdam, MRA, Stadsregio Amsterdam, Noord-Holland, Nederland, (52.374436, 4.8979956033677, 0.0))"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "geolocator.geocode(\"Amsterdam, Netherlands\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "amsterdam = (52.374436, 4.8979956033677)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1699.8259367078563"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vincenty(skopje,amsterdam).kilometers"
    ]
   },
   {
