remove unnecessary stuff

--- a/notebooks/DemoFramework.ipynb
+++ b/notebooks/DemoFramework.ipynb
@@ -348,7 +348,7 @@
    "metadata": {},
    "source": [
     "### Data is serialized and saved in a file. \n",
-    "#### Default location: current working directory. Default filename: GBIFID of the species"
+    "Default location: current working directory. Default filename: GBIFID of the species"
    ]
   },
   {
@@ -396,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's get a general idea of where the species is distributed"
+    "### Let's get a general idea of where the species is distributed on the map"
    ]
   },
   {
@@ -433,7 +433,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Or just load existing data into a Species object. Let's use the file we saved before."
+    "### 2. Or just load existing data into a Species object. Let's use the file we saved before."
    ]
   },
   {
@@ -491,7 +491,7 @@
    "source": [
     "## 3. Examples of simple (meta-)data exploration\n",
     "\n",
-    "### show all unique values of the 'country' column"
+    "#### Show all unique values of the 'country' column"
    ]
   },
   {
@@ -569,7 +569,7 @@
    "metadata": {},
    "source": [
     "### How about latitude/longitude? Does the data need cleaning?\n",
-    "#### head() or tail() is only used to limit the tabular output in this notebook. The \"data\" structure contains it all."
+    "head() or tail() is only used to limit the tabular output in this notebook. The \"data\" structure contains it all."
    ]
   },
   {
@@ -609,7 +609,7 @@
    "metadata": {},
    "source": [
     "### Hmm, so some values are 'NaN', which means not available.  \n",
-    "#### We can fill them with something (default?), or drop those records where latitude/longitude are not available. Let's drop records where the latitude/longitude data is not available"
+    "We can fill them with something (default?), or drop those records where latitude/longitude are not available. Let's drop records where the latitude/longitude data is not available"
    ]
   },
   {
@@ -1664,9 +1664,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Seems like not all records have a 'dateIdentified', but 'day','month', 'year' fields are there for many (all?) records. TODO: what about verbatimDate\n",
+    "Seems like not all records have a 'dateIdentified', but 'day','month', 'year' fields are there for many (all?) records. TODO: what about verbatimDate\n",
     "\n",
-    "### Select only observation records newer than 2010; only latitude, longitude, rightsHolder, datasetName columns are interesting for our selection."
+    "### Select only observation records newer than 2010; \n",
+    "Say that only latitude, longitude, rightsHolder, datasetName columns are interesting for our selection."
    ]
   },
   {
@@ -1684,7 +1685,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### more filtering: select only those with a non-null datasetName"
+    "#### more filtering: select only those with a non-null datasetName"
    ]
   },
   {
