--- a/notebooks/DemoFramework.ipynb
+++ b/notebooks/DemoFramework.ipynb
@@ -2480,6 +2480,97 @@
    "source": [
     "list(set(csv_data.columns.tolist()) - set(data.columns.tolist()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from iSDM.species import IUCNSpecies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "turtles = IUCNSpecies(name_species='Acanthochelys pallidipectoris')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading data from: ../data/FW_TURTLES/FW_TURTLES.shp\n"
+     ]
+    }
+   ],
+   "source": [
+    "turtles.load_shapefile('../data/FW_TURTLES/FW_TURTLES.shp')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Data is filtered to contain only species: Acanthochelys pallidipectoris \n"
+     ]
+    }
+   ],
+   "source": [
+    "turtles.filter_species()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "geopandas.geodataframe.GeoDataFrame"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(turtles.get_data())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
