--- a/notebooks/Shapes.ipynb
+++ b/notebooks/Shapes.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Using py-GDAL/OGR"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -1278,8 +1285,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Using geopandas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -1377,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1420,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -1621,7 +1635,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1632,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -1643,7 +1657,7 @@
        "(181, 26)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1654,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -1670,7 +1684,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1681,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -1692,13 +1706,35 @@
        "array([ 1.,  5.])"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "turtles['presence'].unique() # hmm not all records of presence are with 1 / 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Rhodin'], dtype=object)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "turtles['compiler'].unique()"
    ]
   },
   {
@@ -2194,16 +2230,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "source": [
+    "subset_turt"
+   ]
   }
  ],
  "metadata": {
