--- a/notebooks/DemoFramework-GBIF.ipynb
+++ b/notebooks/DemoFramework-GBIF.ipynb
@@ -15,7 +15,7 @@
    },
    "outputs": [],
    "source": [
-    "from iSDM.species import Species, GBIFSpecies"
+    "from iSDM.species import GBIFSpecies"
    ]
   },
   {
@@ -76,7 +76,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Find and download all matching species data from GBIF, show only first 5 observation rows (head()). At this point no data cleaning is done yet."
+    "## 1. Find and download all matching species data from GBIF. At this point no data cleaning is done yet.\n",
+    "#### Show only first 5 observation rows (head()). "
    ]
   },
   {
