--- a/notebooks/DemoFramework-IUCN.ipynb
+++ b/notebooks/DemoFramework-IUCN.ipynb
@@ -582,7 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Plot the shapefile data, and a convex hull"
+    "#### Plot the shapefile data, and a convex hull. GeoPandas objects also know how to plot themselves directly."
    ]
   },
   {
