--- a/notebooks/DemoFramework-GBIF-1.ipynb
+++ b/notebooks/DemoFramework-GBIF-1.ipynb
@@ -2875,7 +2875,7 @@
    ],
    "source": [
     "# with_envelope means \"pixelized\" (envelope around each buffer region)\n",
-    "geometrized_species = my_species.polygonize(buffer=0.3, simplify_tolerance=0.03, with_envelope=True).plot()\n",
+    "geometrized_species = my_species.polygonize(buffer=0.3, simplify_tolerance=0.03, with_envelope=True)\n",
     "geometrized_species.plot()"
    ]
   },
