--- a/notebooks/Climate.ipynb
+++ b/notebooks/Climate.ipynb
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -767,22 +767,6 @@
      "output_type": "stream",
      "text": [
       "Loaded data from /home/daniela/git/iSDM/data/tmax1/tmax1.bil \n",
-      "Loaded data from /home/daniela/git/iSDM/data/tmax1/tmax1.bil \n",
-      "Metadata: {'affine': Affine(0.041666666666667, 0.0, -180.00000000000335,\n",
-      "       0.0, -0.041666666666667, 90.00000000000003),\n",
-      " 'count': 1,\n",
-      " 'crs': {'init': 'epsg:4326'},\n",
-      " 'driver': 'EHdr',\n",
-      " 'dtype': 'int16',\n",
-      " 'height': 3600,\n",
-      " 'nodata': -9999.0,\n",
-      " 'transform': (-180.00000000000335,\n",
-      "               0.041666666666667,\n",
-      "               0.0,\n",
-      "               90.00000000000003,\n",
-      "               0.0,\n",
-      "               -0.041666666666667),\n",
-      " 'width': 8640} \n",
       "Metadata: {'affine': Affine(0.041666666666667, 0.0, -180.00000000000335,\n",
       "       0.0, -0.041666666666667, 90.00000000000003),\n",
       " 'count': 1,\n",
@@ -799,8 +783,6 @@
       "               -0.041666666666667),\n",
       " 'width': 8640} \n",
       "Resolution: (0.041666666666667, 0.041666666666667) \n",
-      "Resolution: (0.041666666666667, 0.041666666666667) \n",
-      "Bounds: BoundingBox(left=-180.00000000000335, bottom=-60.000000000001165, right=179.9999999999995, top=90.00000000000003) \n",
       "Bounds: BoundingBox(left=-180.00000000000335, bottom=-60.000000000001165, right=179.9999999999995, top=90.00000000000003) \n"
      ]
     },
@@ -816,7 +798,7 @@
        "        [-9999, -9999, -9999, ..., -9999, -9999, -9999]]], dtype=int16)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -846,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -854,6 +836,28 @@
    "source": [
     "import rasterio\n",
     "here = rasterio.open(\"./here.tif\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 16, 37)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "here.read().shape"
    ]
   },
   {
@@ -866,32 +870,10 @@
     {
      "data": {
       "text/plain": [
-       "(1, 16, 37)"
+       "<matplotlib.image.AxesImage at 0x7f8004b4d5c0>"
       ]
      },
      "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "here.read().shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb8f5230b00>"
-      ]
-     },
-     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -899,7 +881,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAW0AAACtCAYAAAB7ni4iAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADvtJREFUeJzt3W+MXOV1x/Hfb9aYP56FQCuMjGscYpGoaanrJrSKm+LG\nJXVpi6NGba1UaiBS1UpNQG0VldIXkBeVSKQ2pVWjKomDIAKlLUoKL5piEKqjUAUcjG0IfwvF2Lgs\nSdqUnVrBeOf0xYztYXdm7uO5d2bvs/v9SCtm7z57n8Pju2fv3rnnHkeEAAB5aCx2AACAdCRtAMgI\nSRsAMkLSBoCMkLQBICMkbQDIyIoy32x7m6S/Vif574yIT/cZwz2FADCCiPD8bR71Pm3bDUnPSdoq\n6YikPZJ2RMQz88bFOT2fH5O0cqQZF1eOcRPzZOQYs5Rn3Msl5vdfeaXu3727b9Iuc3nkCknPR8TB\niHhT0lckbS+xPwBAgTJJ+2JJh3o+P9zdBgAYk4m/ETk16QkrkmPcxDwZOcYs5Rk3MZd7I/IVSet6\nPl/b3bbAsZ7XOS66lGfcxDwZOcYs5Rn3Uo55rvshSf/x0ksDx5U5094jaYPtS2yvlLRD0n39Bq7s\n+chx0QFg3KZ0Kk9uWL9+4LiRz7QjYs72xyXt0qlb/p4edX8AgGKl7tOOiH+V9M6KYgEAFCiVtJez\n2bldhWOmpz5YOKbVfqhwTMTxSuZK1Wp/I2HUGwljii+GpdQJTE9tTZgLk5B2vPJvOk6UsQNARkja\nAJARkjYAZISkDQAZIWkDQEZI2gCQEZI2AGSEpA0AGRm5uMb2Wkl3SlotqS3pCxHxN/3Gttp7R52m\ndy8V7KM6dnHBS0ohgt1OGHNG4ZjZud2FY6anriwckzpudu7hwjHNxvsKx9gLnvHeZ65nC8dMT1VT\nmDs7tz9hrp8qHNNqH0iYrfgYqm5MiuL9pBz3Kcd0q/31pIiK/bCi/UhSM2FMSsHYqsIx01M/mzBX\nf2UqIo9L+uOI2Ge7Kekx27vmd64BAFRn5MsjEfFqROzrvm5Jelo0QQCAsarkmrbt9ZI2Snqkiv0B\nAPornbS7l0bukXRD94wbADAmpZ7yZ3uFOgn7yxFx76Bxt9zy9ydfb9nyHm3Z8p4y0wLAkpPauabs\no1m/JOmpiLht2KBbbvmDktMAwNI2pVP3pmxYv14vHDzYd9zIl0dsb5b0O5I+YPtx23ttbxt1fwCA\nYmXajT0sWj4CwERNpHNNs7FpEtMkSSnmaLWLCyxSbupPmEpVFUY0Ev5mSimIkaTpqc2FY1IKZ1Kk\ndDk5d8W7CsfMzr1QOGZ66h0Jc20sHNNqP1U4xp4rHDPZxlEpB+NZCWNSjteUn40zE/ZTLKJ4P83G\nByqZqy4oYweAjJC0ASAjJG0AyAhJGwAyQtIGgIyQtAEgIyRtAMgISRsAMlL67n7bDUnflnQ4Iq4p\nH9J4pRRzNBspnUm+kzBbyvKmdN6opggjrdinftIKcDYUjmm1X0yYLaUzS8Jukv7NUgpVJlmA80bC\nmJR4UjrA1O3/PR9VnGnfIKm4RAwAUFqppN3tE3m1pC9WEw4AYJiyZ9qflfRJScV/vwIASivzaNZf\nlTTT7RNppT2RBgBQQpkr/ZslXWP7aklnS5q2fWdE/O78gcd6Xvc+6BsA0JHauaZMN/abImJdRFwq\naYekh/olbEla2fNBwgaAhaZ0Kk9uWL9+4Dju0waAjFRyI2RE7Ja0u4p9AQAG4+71PlKKOaS3JYxJ\nKSAo7haSEk6zsS5hrqVrdu6VSvbTbKypZD9pHZKqiVn6XsKYqgpnzkgYU9xNJqJ4rpROQykdi5Ya\nLo8AQEZI2gCQEZI2AGSEpA0AGSFpA0BGSNoAkBGSNgBkhKQNABkpVVxj+zx1nqX9E5Lakj4WEY9U\nEVjdNRsXF46Znft+wn4uqCKcZc+upltKq/1a4ZiU4qvpqdUJ8RQXqkQUF6pMTxUfi632/ybEU5VW\nJXtJ6zJ1aSVz5aRsReRtkv4lIn7T9gpJ51QQEwBggJGTtu1zJb0/Iq6VpIg4Lun1iuICAPRR5pr2\n2yV9z/bttvfa/rzts6sKDACwUJmkvULSJkl/FxGbJB2VdGMlUQEA+iqTtA9LOhQR3+5+fo86SXyB\nYz0fc/0GAMAyN6dTeXJcnWtmJB2yfVl301ZJT/UbS+caABgutXNN2btHrpd0l+0zJL0o6bqS+wMA\nDFEqaUfEfknvrSgWAEABOteMKO3G/2oKZ2bn/q9wzPTUqkrmqqNW+1jCqJQuQcWHe0LDmaQxrXZx\np5iI4jHNxrnFkyVI6RTTbBSXWaR05JmdKy6uaTaW7vE6bpSxA0BGSNoAkBGSNgBkhKQNABkhaQNA\nRkjaAJARkjYAZISkDQAZobgmA+euKO7K0mqnPMo87Z87rTPL5Iojmo2VlewnpTCk1T6asKfiJ+ik\nzJXSlaYqKYUzKdKOjeLjdbkXjJVR6kzb9h/ZftL2Adt32a7mpwsA0NfISdv2GkmfkLQpIi5X5zRu\nR1WBAQAWKnt5ZErSKtttdfpDHikfEgBgkDLP0z4i6S8lvSzpFUk/iIgHqwoMALBQmcsjb5O0XdIl\nktZIatr+SL+xdK4BgOHG3rlG0i9JejEi/jsi5iR9VdL7+g2kcw0ADJfauaZM0n5Z0s/ZPsud+5u2\nSnq6xP4AAAXKXNN+VJ1mvo9L2i/Jkj5fUVwAgD7Kthv7lKRPVRQLBkgpaLDPSthT2jsKad1J8iuO\nSFnHNMXrmNbZqJqCl7p5/Xhx55pJHhspx6pUv+N1EMrYASAjJG0AyAhJGwAyQtIGgIyQtAEgIyRt\nAMgISRsAMkLSBoCM0LlmyZjso7hSCnCwPFVVpNJqH6tkP9LxivZTD4Vn2rZ32p6xfaBn2/m2d9l+\n1vb9ts8bb5gAACnt8sjtkn553rYbJT0YEe+U9JCkP6s6MADAQoVJOyK+Kel/5m3eLumO7us7JH2o\n4rgAAH2M+kbkhRExI0kR8aqkC6sLCQAwSFVvRA59pFnv2wlTohECAMw3p1O3E4yjc82M7dWSZPsi\nSa8NG0znGgAYrurONe5+nHCfpGu7rz8q6d7TDRAAcPpSbvm7W9K/S7rM9su2r5N0q6SrbD+rTpux\nW8cbJgBASrimHRF9O6yr09gXADBBVEQuESmtq1rto0n7Ws6tsqQfFo6IOLNwTEpV4OzcGwn7KZ4r\nR612u3BMVUW3lXWZqwmePQIAGSFpA0BGSNoAkBGSNgBkhKQNABkhaQNARkjaAJARkjYAZKSwuMb2\nTkm/JmkmIi7vbvuMpF+X9IakFyRdFxGvjzNQDJdSEBOR9riuZmNl2XCytcrnT2yupVo4k6LZqOZ8\nMaXtXUoRU05G7VyzS9K7I2KjpOdF5xoAmIiROtdExIMRcaIO9VuS1o4hNgDAPFX8jfIxSV+vYD8A\ngAKlHhhl+88lvRkRdw8bR+caABhu3J1rZPtaSVdLGvTo1pPoXAMAw6V2rkk9035L5xrb2yR9UtIv\nRMTSemsWAGps1M41fyupKekB23ttf27McQIANHrnmtvHEAsAoACda5aR5Vw0g6UprcvS0jruKWMH\ngIyQtAEgIyRtAMgISRsAMkLSBoCMkLQBICMkbQDICEkbADKSUsa+0/aM7QN9vvYnttu2LxhPeACA\nXqN2rpHttZKuknSw6qAAAP2N1Lmm67PqPOkPADAhI13Ttn2NpEMR8UTF8QAAhjjtB0bZPlvSTepc\nGjm5edj30LkGAIYbZ+ead0haL2m/7f9Up6nvY7YvHPQNdK4BgOHG1rkmIp6UdNHJL3QS96aI6Hfd\nGwBQoVE71/QKFVweAQBUY9TONb1fv7S6cAAAw1ARCQAZIWkDQEZI2gCQEZI2AGSEpA0AGZl40p4r\nHlJLOcZNzJORY8xSnnETM0k7WY5xE/Nk5BizlGfcxMzlEQDIymk/MGoUGzdtOvn65SNHtG7NmklM\nW6kc4ybmycgxZinPuJdLzBsuu0z3797d92uOiCriGsj2eCcAgCUqIhY8ImTsSRsAUB2uaQNARkja\nAJCRiSZt29tsP2P7Odt/Osm5R2X7Jdv7bT9u+9HFjmcQ2zttz9g+0LPtfNu7bD9r+37b5y1mjPMN\niPlm24dt7+1+bFvMGOezvdb2Q7a/Y/sJ29d3t9d2rfvE/Inu9tqute0zbT/S/bl7wvbN3e21XWdp\naNyVrfXErmnbbkh6TtJWSUck7ZG0IyKemUgAI7L9oqSfqXuTB9s/L6kl6c6IuLy77dOSvh8Rn+n+\nkjw/Im5czDh7DYj5ZkmzEfFXixrcALYvknRRROyz3ZT0mKTtkq5TTdd6SMy/rXqv9TkRcdT2lKSH\nJV0v6cOq6TqfMCDuX1FFaz3JM+0rJD0fEQcj4k1JX1HnwKk7K4PLSBHxTUnzf7Fsl3RH9/Udkj40\n0aAKDIhZqnFTjYh4NSL2dV+3JD2tTsu92q71gJgv7n65zmt9tPvyTHVuTw7VeJ1PGBC3VNFaTzIZ\nXSzpUM/nh3XqwKmzkPSA7T22f2+xgzlNF0bEjNT5wZU0sI9nzXzc9j7bX6zbn7+9bK+XtFHStySt\nzmGte2J+pLuptmttu2H7cUmvSnogIvYog3UeELdU0VrX/gyyBjZHxCZJV0v6w+6f9LnK4f7Oz0m6\nNCI2qnPQ1/VP96akeyTd0D17nb+2tVvrPjHXeq0joh0RP63OXzJX2H63MljnPnH/uCpc60km7Vck\nrev5fG13W61FxH91//tdSV9T5zJPLmZsr5ZOXtd8bZHjKRQR341Tb7R8QdJ7FzOefmyvUCf5fTki\n7u1urvVa94s5h7WWpIh4XdK/Sdqmmq9zr964q1zrSSbtPZI22L7E9kpJOyTdN8H5T5vtc7pnJ7K9\nStIHJT25uFENZb31utl9kq7tvv6opHvnf0MNvCXm7g/iCb+heq73lyQ9FRG39Wyr+1oviLnOa237\nR09cQrB9tqSr1LkWX+t1HhD3M1Wu9UQrIru3udymzi+LnRFx68QmH4Htt6tzdh3qvKFwV11jtn23\npC2SfkTSjKSbJf2zpH+S9GOSDkr6rYj4wWLFON+AmH9RnWuubUkvSfr9E9cw68D2ZknfkPSEOsdF\nSLpJ0qOS/lE1XOshMX9ENV1r2z+pzhuNje7HP0TEX9i+QDVdZ2lo3HeqorWmjB0AMsIbkQCQEZI2\nAGSEpA0AGSFpA0BGSNoAkBGSNgBkhKQNABkhaQNARv4fEsWeAM1QPRUAAAAASUVORK5CYII=\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fb8f5f26ac8>"
+       "<matplotlib.figure.Figure at 0x7f800b5ce8d0>"
       ]
      },
      "metadata": {},
@@ -912,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -922,22 +904,6 @@
      "output_type": "stream",
      "text": [
       "Loaded data from /home/daniela/git/iSDM/data/tmax1/tmax1.bil \n",
-      "Loaded data from /home/daniela/git/iSDM/data/tmax1/tmax1.bil \n",
-      "Metadata: {'affine': Affine(0.041666666666667, 0.0, -180.00000000000335,\n",
-      "       0.0, -0.041666666666667, 90.00000000000003),\n",
-      " 'count': 1,\n",
-      " 'crs': {'init': 'epsg:4326'},\n",
-      " 'driver': 'EHdr',\n",
-      " 'dtype': 'int16',\n",
-      " 'height': 3600,\n",
-      " 'nodata': -9999.0,\n",
-      " 'transform': (-180.00000000000335,\n",
-      "               0.041666666666667,\n",
-      "               0.0,\n",
-      "               90.00000000000003,\n",
-      "               0.0,\n",
-      "               -0.041666666666667),\n",
-      " 'width': 8640} \n",
       "Metadata: {'affine': Affine(0.041666666666667, 0.0, -180.00000000000335,\n",
       "       0.0, -0.041666666666667, 90.00000000000003),\n",
       " 'count': 1,\n",
@@ -954,14 +920,34 @@
       "               -0.041666666666667),\n",
       " 'width': 8640} \n",
       "Resolution: (0.041666666666667, 0.041666666666667) \n",
-      "Resolution: (0.041666666666667, 0.041666666666667) \n",
-      "Bounds: BoundingBox(left=-180.00000000000335, bottom=-60.000000000001165, right=179.9999999999995, top=90.00000000000003) \n",
       "Bounds: BoundingBox(left=-180.00000000000335, bottom=-60.000000000001165, right=179.9999999999995, top=90.00000000000003) \n"
      ]
     }
    ],
    "source": [
     "original_data = temperature_max_january.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 3600, 8640)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "original_data.shape"
    ]
   },
   {
@@ -974,32 +960,10 @@
     {
      "data": {
       "text/plain": [
-       "(1, 3600, 8640)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "original_data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "-9999.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1010,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -1030,7 +994,7 @@
        " 'width': 37}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1041,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -1052,7 +1016,7 @@
        "BoundingBox(left=-180.000000000003, bottom=-70.0, right=189.999999999997, top=90.0)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
