keep one folder for consistency

--- a/notebooks/Fish_inventory.ipynb
+++ b/notebooks/Fish_inventory.ipynb
@@ -6798,7 +6798,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get the GBIF/IUCN data on the first and the last species in the sorted list"
+    "Get the GBIF/IUCN data on the first and the last species in the sorted list. That would be our representative choise for testing workflow."
    ]
   },
   {
@@ -6856,7 +6856,7 @@
     "\n",
     "my_species = GBIFSpecies(name_species=\"Lepidomeda mollispinis\")\n",
     "# download point-records on these species from: https://drive.google.com/open?id=0B9cazFzBtPuCMGlLMnQzb3hsQm8\n",
-    "data = my_species.load_data(\"../data/fish/selection/gbif/Lepidomeda mollispinis2361895.pkl\")\n",
+    "data = my_species.load_data(\"../data/fish/selection/Lepidomeda mollispinis2361895.pkl\")\n",
     "my_species.plot_species_occurrence()"
    ]
   },
@@ -6915,7 +6915,7 @@
     "\n",
     "my_species = GBIFSpecies(name_species=\"Salmo trutta\")\n",
     "# download point-records on these species from: https://drive.google.com/open?id=0B9cazFzBtPuCWEIySU5oU2ZfT2M \n",
-    "data = my_species.load_data(\"../data/fish/selection/gbif/Salmo trutta8215487.pkl\")\n",
+    "data = my_species.load_data(\"../data/fish/selection/Salmo trutta8215487.pkl\")\n",
     "my_species.plot_species_occurrence() # warning: a lot of point-records, may take a while!!"
    ]
   },
