--- a/notebooks/Fish_inventory.ipynb
+++ b/notebooks/Fish_inventory.ipynb
@@ -34,8 +34,7 @@
     }
    ],
    "source": [
-    "# download http://bit.ly/1R8pt20 (zipped Turtles shapefiles), and unzip them\n",
-    "# or download from Google Drive: https://drive.google.com/open?id=0B9cazFzBtPuCSFp3YWE1V2JGdnc\n",
+    "# download from Google Drive: https://drive.google.com/open?id=0B9cazFzBtPuCSFp3YWE1V2JGdnc\n",
     "from iSDM.species import IUCNSpecies\n",
     "fish = IUCNSpecies(name_species='All')\n",
     "fish.load_shapefile('../data/fish/FW_FISH.shp') # warning, 2GB of data will be loaded, may take a while!!"
@@ -6857,6 +6856,17 @@
    ],
    "source": [
     "my_species.overlay(salmo_trutta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "my_species.get_data()"
    ]
   },
   {
