--- a/notebooks/Fish_TestCases.ipynb
+++ b/notebooks/Fish_TestCases.ipynb
@@ -4647,13 +4647,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 117,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "merged2.to_csv(\"../data/fish/selection/dataframe2.csv\")"
+    "merged2.to_csv(\"../data/fish/selection/dataframe_merged.csv\")"
    ]
   },
   {
@@ -4680,8 +4680,269 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add continents column"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 148,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Transforming to world coordinates...\n",
+      "Affine transformation T0:\n",
+      " |-0.50, 0.00, 90.00|\n",
+      "| 0.00, 0.50,-180.00|\n",
+      "| 0.00, 0.00, 1.00| \n",
+      "Raster data shape: (360, 720) \n",
+      "Affine transformation T1:\n",
+      " |-0.50, 0.00, 89.75|\n",
+      "| 0.00, 0.50,-179.75|\n",
+      "| 0.00, 0.00, 1.00| \n",
+      "Filtering out no_data pixels.\n",
+      "Transformation to world coordinates completed.\n",
+      "Transforming to world coordinates...\n",
+      "Affine transformation T0:\n",
+      " |-0.50, 0.00, 90.00|\n",
+      "| 0.00, 0.50,-180.00|\n",
+      "| 0.00, 0.00, 1.00| \n",
+      "Raster data shape: (360, 720) \n",
+      "Affine transformation T1:\n",
+      " |-0.50, 0.00, 89.75|\n",
+      "| 0.00, 0.50,-179.75|\n",
+      "| 0.00, 0.00, 1.00| \n",
+      "Filtering out no_data pixels.\n",
+      "Transformation to world coordinates completed.\n",
+      "Transforming to world coordinates...\n",
+      "Affine transformation T0:\n",
+      " |-0.50, 0.00, 90.00|\n",
+      "| 0.00, 0.50,-180.00|\n",
+      "| 0.00, 0.00, 1.00| \n",
+      "Raster data shape: (360, 720) \n",
+      "Affine transformation T1:\n",
+      " |-0.50, 0.00, 89.75|\n",
+      "| 0.00, 0.50,-179.75|\n",
+      "| 0.00, 0.00, 1.00| \n",
+      "Filtering out no_data pixels.\n",
+      "Transformation to world coordinates completed.\n",
+      "Transforming to world coordinates...\n",
+      "Affine transformation T0:\n",
+      " |-0.50, 0.00, 90.00|\n",
+      "| 0.00, 0.50,-180.00|\n",
+      "| 0.00, 0.00, 1.00| \n",
+      "Raster data shape: (360, 720) \n",
+      "Affine transformation T1:\n",
+      " |-0.50, 0.00, 89.75|\n",
+      "| 0.00, 0.50,-179.75|\n",
+      "| 0.00, 0.00, 1.00| \n",
+      "Filtering out no_data pixels.\n",
+      "Transformation to world coordinates completed.\n",
+      "Transforming to world coordinates...\n",
+      "Affine transformation T0:\n",
+      " |-0.50, 0.00, 90.00|\n",
+      "| 0.00, 0.50,-180.00|\n",
+      "| 0.00, 0.00, 1.00| \n",
+      "Raster data shape: (360, 720) \n",
+      "Affine transformation T1:\n",
+      " |-0.50, 0.00, 89.75|\n",
+      "| 0.00, 0.50,-179.75|\n",
+      "| 0.00, 0.00, 1.00| \n",
+      "Filtering out no_data pixels.\n",
+      "Transformation to world coordinates completed.\n",
+      "Transforming to world coordinates...\n",
+      "Affine transformation T0:\n",
+      " |-0.50, 0.00, 90.00|\n",
+      "| 0.00, 0.50,-180.00|\n",
+      "| 0.00, 0.00, 1.00| \n",
+      "Raster data shape: (360, 720) \n",
+      "Affine transformation T1:\n",
+      " |-0.50, 0.00, 89.75|\n",
+      "| 0.00, 0.50,-179.75|\n",
+      "| 0.00, 0.00, 1.00| \n",
+      "Filtering out no_data pixels.\n",
+      "Transformation to world coordinates completed.\n",
+      "Transforming to world coordinates...\n",
+      "Affine transformation T0:\n",
+      " |-0.50, 0.00, 90.00|\n",
+      "| 0.00, 0.50,-180.00|\n",
+      "| 0.00, 0.00, 1.00| \n",
+      "Raster data shape: (360, 720) \n",
+      "Affine transformation T1:\n",
+      " |-0.50, 0.00, 89.75|\n",
+      "| 0.00, 0.50,-179.75|\n",
+      "| 0.00, 0.00, 1.00| \n",
+      "Filtering out no_data pixels.\n",
+      "Transformation to world coordinates completed.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, band in enumerate(continents_rasters):\n",
+    "    continents_coordinates = biomes_adf.pixel_to_world_coordinates(raster_data=band)\n",
+    "    continent_dataframe = pd.DataFrame([continents_coordinates[0], continents_coordinates[1]]).T\n",
+    "    continent_dataframe.columns=['decimallatitude', 'decimallongitude']\n",
+    "    continent_dataframe['Continent'] = idx\n",
+    "    continent_dataframe.set_index(['decimallatitude', 'decimallongitude'], inplace=True, drop=True)\n",
+    "    continent_dataframe.head()\n",
+    "    merged2 = merged2.combine_first(continent_dataframe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30612, 7)"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged2[merged2.Continent==0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30612"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.count_nonzero(continents_rasters[0]) # good!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10701, 7)"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged2[merged2.Continent==2].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10709"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.count_nonzero(continents_rasters[2]) # good!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Continent', 'Esox lucius', 'Lepidomeda mollispinis', 'MaxT',\n",
+       "       'MeanT', 'MinT', 'Salmo trutta'], dtype=object)"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged2.columns.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# rearange columns again"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cols = merged2.columns.values\n",
+    "cols1 = [cols[5], cols[3], cols[4], cols[1], cols[2], cols[6], cols[0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "merged2 = merged2[cols1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
    "metadata": {
     "collapsed": false
    },
@@ -4701,10 +4962,12 @@
        "      <th>Esox lucius</th>\n",
        "      <th>Lepidomeda mollispinis</th>\n",
        "      <th>Salmo trutta</th>\n",
+       "      <th>Continent</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>decimallatitude</th>\n",
        "      <th>decimallongitude</th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -4723,6 +4986,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>-179.25</th>\n",
@@ -4732,6 +4996,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>-178.75</th>\n",
@@ -4741,6 +5006,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>-178.25</th>\n",
@@ -4750,6 +5016,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>-177.75</th>\n",
@@ -4759,6 +5026,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4781,22 +5049,33 @@
        "                -178.25                   NaN                     NaN   \n",
        "                -177.75                   NaN                     NaN   \n",
        "\n",
-       "                                  Salmo trutta  \n",
-       "decimallatitude decimallongitude                \n",
-       "-89.75          -179.75                    NaN  \n",
-       "                -179.25                    NaN  \n",
-       "                -178.75                    NaN  \n",
-       "                -178.25                    NaN  \n",
-       "                -177.75                    NaN  "
+       "                                  Salmo trutta  Continent  \n",
+       "decimallatitude decimallongitude                           \n",
+       "-89.75          -179.75                    NaN        6.0  \n",
+       "                -179.25                    NaN        6.0  \n",
+       "                -178.75                    NaN        6.0  \n",
+       "                -178.25                    NaN        6.0  \n",
+       "                -177.75                    NaN        6.0  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "merged2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "merged2.to_csv(\"../data/fish/selection/dataframe_merged_with_continents.csv\")"
    ]
   },
   {
