all those decisions changing last minute... i lost track.

--- a/notebooks/Freshwater_Ecoregions_vs_Bias_grid.ipynb
+++ b/notebooks/Freshwater_Ecoregions_vs_Bias_grid.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -127,10 +127,10 @@
     {
      "data": {
       "text/plain": [
-       "<osgeo.ogr.Layer; proxy of <Swig Object of type 'OGRLayerShadow *' at 0x7fd062cbb150> >"
+       "<osgeo.ogr.Layer; proxy of <Swig Object of type 'OGRLayerShadow *' at 0x7fe9ae61bae0> >"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,13 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "pixelWidth = pixelHeight = 0.083333333\n",
+    "pixelWidth = pixelHeight = 0.0083333333  # around 2GB for a global file at this resolution using UInt16 (2 bytes)\n",
     "x_min, y_min, x_max, y_max = -180, -90, 180, 90\n",
     "cols = int((x_max - x_min) / pixelHeight)\n",
     "rows = int((y_max - y_min) / pixelWidth)\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -182,7 +182,7 @@
        "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -204,7 +204,7 @@
        "0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -240,20 +240,20 @@
      "text": [
       "Loaded raster data from ../data/freshwater_ecoregions/freshwater_ecoregions.tif \n",
       "Driver name: GTiff \n",
-      "Metadata: {'affine': Affine(0.083333333, 0.0, -180.0,\n",
-      "       0.0, -0.083333333, 90.0),\n",
+      "Metadata: {'affine': Affine(0.0083333333, 0.0, -180.0,\n",
+      "       0.0, -0.0083333333, 90.0),\n",
       " 'count': 1,\n",
       " 'crs': {'init': 'epsg:4326'},\n",
       " 'driver': 'GTiff',\n",
       " 'dtype': 'uint16',\n",
-      " 'height': 2160,\n",
+      " 'height': 21600,\n",
       " 'nodata': 0.0,\n",
-      " 'transform': (-180.0, 0.083333333, 0.0, 90.0, 0.0, -0.083333333),\n",
-      " 'width': 4320} \n",
-      "Resolution: x_res=4320 y_res=2160.\n",
-      "Bounds: BoundingBox(left=-180.0, bottom=-89.99999928, right=179.99999856, top=90.0) \n",
+      " 'transform': (-180.0, 0.0083333333, 0.0, 90.0, 0.0, -0.0083333333),\n",
+      " 'width': 43200} \n",
+      "Resolution: x_res=43200 y_res=21600.\n",
+      "Bounds: BoundingBox(left=-180.0, bottom=-89.99999928000003, right=179.99999856000005, top=90.0) \n",
       "Coordinate reference system: {'init': 'epsg:4326'} \n",
-      "Affine transformation: (-180.0, 0.083333333, 0.0, 90.0, 0.0, -0.083333333) \n",
+      "Affine transformation: (-180.0, 0.0083333333, 0.0, 90.0, 0.0, -0.0083333333) \n",
       "Number of layers: 1 \n",
       "Dataset loaded. Use .read() or .read_masks() to access the layers.\n"
      ]
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -323,7 +323,7 @@
        "       916, 917, 918, 919, 920, 921, 998, 999], dtype=uint16)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -433,10 +433,10 @@
     {
      "data": {
       "text/plain": [
-       "(2160, 4320)"
+       "(21600, 43200)"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
